--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Grupp7DB": "Server=tcp:grupp-7-gang22.database.windows.net,1433;Initial Catalog=grupp-7-database;Persist Security Info=False;User ID=Gang7Admin;Password=Gang7123.;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
