jwt token fixed

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Grupp7DB": "Server=tcp:grupp-7-gang22.database.windows.net,1433;Initial Catalog=grupp-7-database;Persist Security Info=False;User ID=Gang7Admin;Password=Gang7123.;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+  "TokenValidation": {
+    "Issuer": "ManeroWebApiGrupp7",
+    "Audience": "AuthorizedUsers",
+    "SecretKey": "639f5c84-7de0-4a06-8c6a-0f7383d9bfd8"
   }
 }
