--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    "VickyTest": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\vikto\\OneDrive\\Dokument\\grupp-7-test-db.mdf;Integrated Security=True;Connect Timeout=30",
     "Grupp7DB": "Server=tcp:grupp-7-gang22.database.windows.net,1433;Initial Catalog=grupp-7-database;Persist Security Info=False;User ID=Gang7Admin;Password=Gang7123.;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "TokenValidation": {
