Entities almost done : ^^^^^^^^^^^^^^^^^^^^^^^^^^^)

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "VickyTest": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\vikto\\OneDrive\\Dokument\\grupp-7-test-db.mdf;Integrated Security=True;Connect Timeout=30",
+    "Test": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\s\\Documents\\5e856ee5656.mdf;Integrated Security=True;Connect Timeout=30",
     "Grupp7DB": "Server=tcp:grupp-7-gang22.database.windows.net,1433;Initial Catalog=grupp-7-database;Persist Security Info=False;User ID=Gang7Admin;Password=Gang7123.;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "TokenValidation": {
